[gd_scene load_steps=7 format=3 uid="uid://b8x7w2oy5s8pk"]

[ext_resource type="Script" path="res://systems/player/PlayerUI.gd" id="1_5r6qt"]
[ext_resource type="Texture2D" uid="uid://djstht21eoi33" path="res://art/sprites/knight_2/combat/Special1.png" id="2_ability1"]
[ext_resource type="Texture2D" uid="uid://csy4gh6pel3j7" path="res://art/sprites/knight_2/combat/Special2.png" id="3_ability2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hp_bg"]
bg_color = Color(0.2, 0.2, 0.2, 0.6)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="AtlasTexture" id="AtlasTexture_ability1"]
atlas = ExtResource("2_ability1")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ability2"]
atlas = ExtResource("3_ability2")
region = Rect2(576, 0, 64, 64)

[node name="PlayerUI" type="CanvasLayer"]
script = ExtResource("1_5r6qt")

[node name="HealthBar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 50.0
grow_vertical = 0

[node name="Background" type="Panel" parent="HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hp_bg")

[node name="HealthFill" type="ColorRect" parent="HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.9, 0.9, 0.9, 0.8)

[node name="AbilityContainer" type="HBoxContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = 180.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="Ability1" type="Control" parent="AbilityContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="Background" type="ColorRect" parent="AbilityContainer/Ability1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.8)

[node name="Icon" type="TextureRect" parent="AbilityContainer/Ability1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_ability1")
expand_mode = 1
stretch_mode = 5

[node name="CooldownOverlay" type="ColorRect" parent="AbilityContainer/Ability1"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.7)

[node name="CooldownProgress" type="ColorRect" parent="AbilityContainer/Ability1"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.7)

[node name="CooldownText" type="Label" parent="AbilityContainer/Ability1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -10.0
offset_right = 15.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 14
text = "Q"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Ability2" type="Control" parent="AbilityContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="Background" type="ColorRect" parent="AbilityContainer/Ability2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.8)

[node name="Icon" type="TextureRect" parent="AbilityContainer/Ability2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_ability2")
expand_mode = 1
stretch_mode = 5

[node name="CooldownOverlay" type="ColorRect" parent="AbilityContainer/Ability2"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.7)

[node name="CooldownProgress" type="ColorRect" parent="AbilityContainer/Ability2"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.7)

[node name="CooldownText" type="Label" parent="AbilityContainer/Ability2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -10.0
offset_right = 15.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 14
text = "R"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShadowEssence" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="Background" type="Panel" parent="ShadowEssence"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hp_bg")

[node name="EssenceIcon" type="ColorRect" parent="ShadowEssence"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -12.0
offset_right = 32.0
offset_bottom = 12.0
grow_vertical = 2
color = Color(0.4, 0.2, 0.7, 1)

[node name="EssenceLabel" type="Label" parent="ShadowEssence"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -10.0
offset_right = -8.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 16
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="EssenceText" type="Label" parent="ShadowEssence"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 36.0
offset_top = -10.0
offset_right = 110.0
offset_bottom = 10.0
grow_vertical = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 12
text = "Essence"
vertical_alignment = 1
